--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "shopify_fe",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mingliangdai.github.io/nasa-apod-gallery/",
   "dependencies": {
     "@date-io/date-fns": "1.x",
     "@emotion/react": "^11.7.1",
